--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
 }
 /* Add your fancy print styles here */
 body {
-    background-color: #f5f5f5;
+    background-color: hsl(249, 76%, 46%);
     color: #333;
 }
 
